# micro-expressions-utility

./: .agent.md  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPRINT1.md  SPRINT2.md  SPRINT3.md  SPRINT4.md  docker-compose.harness.yml  docker-compose.yml  plan.md  pyproject.toml  research.md
.specs/: DESIGN.md  Harness_Engineering_System_Design_Questionnaire.md  PRD_SaaS_Lean_Ollama_MVP.md  spec.md
app/: __init__.py  config.py  db.py  main.py  models.py  observability.py  schemas.py  security.py
app/api/: auth.py  meetings.py
app/core/: prompt.py  report.py  signals.py  telemetry.py  timeline.py  timestamp.py  tokens.py  types.py
app/integrations/: __init__.py  audio_ffmpeg.py  frames_cv2.py  mediapipe_real.py  ollama_real.py  tiktoken_counter.py  whisper_real.py
app/services/: context.py  errors.py  factory.py  fake_components.py  interfaces.py  pipeline.py  report_builder.py  retention.py
app/workers/: manager.py  processor.py
checkpoints/: plan-to-tasks.yaml  spec-to-plan.yaml
ci/: README.md  mprof_check.sh  run_tests.sh  validate_requirements.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: LoginForm.tsx  MeetingsPanel.tsx  ReportView.tsx  UploadForm.tsx  ui.tsx
frontend/lib/: api.ts
mocks/: __init__.py  mediapipe_fake.py  ollama_fake.py  whisper_fake.py
scripts/: mprof_target.py  normalize_video.sh  retention.py
tests/: conftest.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_auth.py  test_meetings_api.py  test_queue.py  test_retention.py
tests/unit/: test_context.py  test_factory.py  test_mocks.py  test_observability.py  test_pipeline.py  test_prompt.py  test_report.py  test_report_builder.py  test_security.py  test_signals.py  test_telemetry.py  test_timeline.py  test_timestamp.py  test_tokens.py
