[project]
name = "micro-expressions-utility"
version = "0.1.0"
description = "SaaS lean local-first de insights comportamentais de vendas (FastAPI + workers + Ollama)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
]

# Dependências de IA/vídeo: AUTORIZADAS na allowlist, instaladas só no Sprint 2.
# opencv-python, mediapipe, faster-whisper, tiktoken, psutil, numpy

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "memory_profiler>=0.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — lint + format (gate do Harness: `ruff check .`)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert é esperado em testes

[tool.ruff.lint.flake8-bugbear]
# Padrão do FastAPI: estas chamadas em argumentos default são intencionais.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

# ---------------------------------------------------------------------------
# Mypy — checagem estrita de tipos (gate do Harness: `mypy --strict .`)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ['^\.venv/']

[[tool.mypy.overrides]]
# SQLModel/SQLAlchemy expõem tipos parcialmente dinâmicos
module = ["sqlmodel.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + cobertura (gate do Harness: cobertura >= 70%)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
