[project]
name = "micro-expressions-utility"
version = "0.1.0"
description = "SaaS lean local-first de insights comportamentais de vendas (FastAPI + workers + Ollama)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.18",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "psutil>=6.0",
]

[project.optional-dependencies]
# Stack pesada de IA/vídeo: instalada sob demanda (`uv sync --extra ml`) e usada apenas
# com APP_USE_REAL_PIPELINE=true (estágio final de aprovação). Tudo na allowlist.
ml = [
    "opencv-python>=4.10",
    "mediapipe>=0.10.18",
    "faster-whisper>=1.1",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.25",
    "memory_profiler>=0.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff — lint + format (gate do Harness: `ruff check .`)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert é esperado em testes

[tool.ruff.lint.flake8-bugbear]
# Padrão do FastAPI: estas chamadas em argumentos default são intencionais.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

# ---------------------------------------------------------------------------
# Mypy — checagem estrita de tipos (gate do Harness: `mypy --strict .`)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ['^\.venv/']

[[tool.mypy.overrides]]
# SQLModel/SQLAlchemy expõem tipos parcialmente dinâmicos
module = ["sqlmodel.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Bibliotecas pesadas (extra `ml`) e psutil não trazem stubs / não estão instaladas no CI.
module = ["cv2.*", "mediapipe.*", "faster_whisper.*", "psutil.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + cobertura (gate do Harness: cobertura >= 70%)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    # Integrações reais e wiring de processo: validadas no estágio final (modelos/hardware),
    # fora da cobertura determinística de CI.
    "app/integrations/*",
    "app/workers/processor.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
